--- a/.github/workflows/docker-auto-test.yaml
+++ b/.github/workflows/docker-auto-test.yaml
@@ -7,14 +7,14 @@ on:
 
 jobs:
   teams-notification:
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
     if: always()
     steps:
       - name: Determine Test Status
         id: test_status
         run: |
-          echo "status=failure" >> $GITHUB_OUTPUT
-          echo "theme_color=FF0000" >> $GITHUB_OUTPUT
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "theme_color=FF0000" >> $GITHUB_OUTPUT
 
       - name: Send custom Teams notification
         run: |
@@ -23,12 +23,12 @@ jobs:
           REPO="${{ github.repository }}"
           PR_NUMBER="${{ github.event.pull_request.number }}"
           PR_AUTHOR="${{ github.event.pull_request.user.login }}"
-          COMMIT_SHA="${{ github.event.pull_request.head.sha }}"
+          COMMIT_SHA="${{ github.event.head_commit.message }}"
           AVATAR_URL="${{ github.event.pull_request.user.avatar_url }}"
           THREAD_ID="pr-${PR_NUMBER}"
           WORKFLOW_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
-          MESSAGE="**Test Results**\n- echo '❌ Failed'"
+          MESSAGE="**Test Results**\n- Backend Tests: ${{ needs.backend-tests.result }}\n- Frontend Tests: ${{ needs.frontend-tests.result }}\n\n**Status:** $([[ '${{ steps.test_status.outputs.status }}' == 'failure' ]] && echo '❌ Failed' || echo '✅ Passed')"
 
           COLOR="${{ steps.test_status.outputs.theme_color }}"
 
