--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -51,10 +51,11 @@ jobs:
         run: docker exec backend poetry run python /app/lcfs/db/seeders/seed_database.py
 
       - name: Build Frontend Service
-        run: docker build -t frontend-service -f ./frontend/Dockerfile.dev ./frontend -e DB_CYPRESS_PASS=development_only -e DB_CYPRESS_USER=lcfs
+        run: docker build -t frontend-service -f ./frontend/Dockerfile.dev ./frontend
 
       - name: Run Frontend Service
-        run: docker run -d --name frontend --network=host frontend-service
+        run: docker run -d --name frontend --network=host -e DB_CYPRESS_PASS=development_only -e DB_CYPRESS_USER=lcfs frontend-service
+      
 
       - name: Cypress run
         uses: cypress-io/github-action@v6
@@ -93,3 +94,65 @@ jobs:
         run: |
           docker stop backend frontend
           docker rm backend frontend
+  teams-notification:
+    needs: cypress
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Determine Cypress Test Status
+        id: test_status
+        run: |
+          if [[ "${{ needs.cypress.result }}" == "failure" ]]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "theme_color=FF0000" >> $GITHUB_OUTPUT
+          else
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "theme_color=00FF00" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Send Teams notification
+        run: |
+          REPO="${{ github.repository }}"
+          WORKFLOW_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          STATUS="${{ steps.test_status.outputs.status }}"
+          COLOR="${{ steps.test_status.outputs.theme_color }}"
+          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M UTC")
+
+          MESSAGE="**Cypress Daily Test Run**\n- **Status:** $([[ '$STATUS' == 'failure' ]] && echo '❌ Failed' || echo '✅ Passed')\n- **Time:** $TIMESTAMP"
+
+          cat <<EOF > teams_card.json
+          {
+            "@type": "MessageCard",
+            "@context": "http://schema.org/extensions",
+            "themeColor": "$COLOR",
+            "summary": "Cypress Daily Test Result",
+            "sections": [
+              {
+                "activityTitle": "Cypress Daily Test Result",
+                "activitySubtitle": "Repository: $REPO",
+                "facts": [
+                  { "name": "Workflow", "value": "Cypress Daily" },
+                  { "name": "Status", "value": "$STATUS" },
+                  { "name": "Run Time", "value": "$TIMESTAMP" }
+                ],
+                "text": "$MESSAGE",
+                "markdown": true
+              }
+            ],
+            "potentialAction": [
+              {
+                "@type": "OpenUri",
+                "name": "View Workflow Run",
+                "targets": [
+                  {
+                    "os": "default",
+                    "uri": "$WORKFLOW_URL"
+                  }
+                ]
+              }
+            ]
+          }
+          EOF
+
+          curl -H "Content-Type: application/json" -d @teams_card.json "${{ secrets.TEAMS_WEBHOOK_URL }}"
+      
