--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -55,16 +55,11 @@ jobs:
 
       - name: Run Frontend Service
         run: docker run -d --name frontend --network=host -e DB_CYPRESS_PASS=development_only -e DB_CYPRESS_USER=lcfs frontend-service
-      - name: Create .env file for Cypress
-        run: |
-          echo "DB_CYPRESS_USER=${{ secrets.DB_CYPRESS_USER }}" >> frontend/.env
-          echo "DB_CYPRESS_PASSWORD=${{ secrets.DB_CYPRESS_PASSWORD }}" >> frontend/.env
-          echo "DB_CYPRESS_HOST=localhost" >> frontend/.env
-          echo "DB_CYPRESS_NAME=lcfs" >> frontend/.env
-          echo "DB_PORT=5432" >> frontend/.env
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          headed: false
           browser: chrome
           wait-on: "http://localhost:3000"
           wait-on-timeout: 60
