Feat: LCFS - Create Cypress Scenario for End-to-End Compliance Report Workflow #2016

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -178,5 +178,5 @@ jobs:
           }
           EOF
 
-          curl -H "Content-Type: application/json" -d @teams_card.json "${{ secrets.TEAMS_WEBHOOK_URL }}"
+          curl -H "Content-Type: application/json" -d @teams_card.json "${{ secrets.TEAMS_WEBHOOK_URL_2 }}"
       
